Rebrand to Generic Wholesale - Update contact numbers and remove welcome bonus

--- a/contact.html
+++ b/contact.html
@@ -426,7 +426,7 @@
                                 <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
                                 <div class="contact-info">
                                     <h5>Our Location</h5>
-                                    <p><strong>Amazon Gymkhana Pvt Ltd</strong></p>
+                                    <p><strong>Generic Wholesale Pvt Ltd</strong></p>
                                     <p>Dilawer Cheema Khurd, 52061</p>
                                     <p>Pakistan</p>
                                 </div>
