--- a/EMAIL_TEMPLATE_PREVIEW.html
+++ b/EMAIL_TEMPLATE_PREVIEW.html
@@ -111,7 +111,7 @@
     </div>
     <div class="footer">
       <p>This is an automated email. Please do not reply.</p>
-      <p>&copy; 2025 Amazon Gymkhana. All rights reserved.</p>
+      <p>&copy; 2025 Generic Wholesale. All rights reserved.</p>
     </div>
   </div>
 
